--- a/app.xok102.com.json
+++ b/app.xok102.com.json
@@ -1,6 +1,6 @@
 {
   "url": "https://app.xok102.com/",
-  "enable": true,
+  "enable": false,
   "orientation": -1,
   "hideStatusBar": false,
   "enableFullScreen": false,
